--- a/funflow/package.yaml
+++ b/funflow/package.yaml
@@ -33,7 +33,7 @@ dependencies:
   - store
   - temporary
   - text >= 2.0
-  - unix-compat
+  - unix-compat == 0.6
   - unliftio
   - unordered-containers
   - utf8-string
